# cli-chat

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DISCOVERIES.md  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml  take_home.md
src/cli_chat/: chat.py  display.py  main.py  models.py  orchestrator.py  tools.py
tests/: test_e2e.py
