[project]
name = "cli-chat"
version = "0.1.0"
description = "CLI chat application with streaming LLM responses and tool calling"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
]

[project.scripts]
cli-chat = "cli_chat.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_chat"]

# ── Dev dependencies ──────────────────────────────────────────────────────────

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.390",
    "pylint>=3.3.0",
    "ruff>=0.8.0",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["cli_chat"]

# ── Pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

# ── Pylint ────────────────────────────────────────────────────────────────────

[tool.pylint.main]
load-plugins = []
source-roots = ["src"]

[tool.pylint."messages control"]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 120

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
